--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 header {
+    border: 1px solid black;
+    outline-style: groove;
     height: 70px;
     text-align: center;
     text-decoration-style: double;
@@ -9,24 +11,33 @@ header {
     
 }
 nav {
+    text-align: center;
+    max-height: 30px;
+    min-height: 25px;
     word-spacing: 30px;
     background-color: lightgrey;
+    margin-top: 2px;
 }
 main {
-    text-align: center;
-    pading: 40px 40px;
+    padding: 20px 20px;
 }
 
 article {
+    text-align: left
+    padding: inherit;
     background-color: whitesmoke;
     font-family: sans-serif;
-    line-height: 30px;
-    word-spacing: 2px;
-    
-    
+    line-height: auto;
+    word-spacing: auto;
 }
-
+p {
+    padding: 2 4 2 4;
+}
 footer{
     background-color: lightgrey;
     font-family: cursive;
+}
+img{
+    float: right;
+    margin:inherit;
 }
